--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/pixyll.css" | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
+    <link rel="stylesheet" href="/css/pixyll.css" type="text/css">
 
     <!-- Fonts -->
     {% if site.extended_fonts %}
