sass linking still not working?

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/pixyll.scss" | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
-    <link rel="stylesheet" href="/css/pixyll.css" type="text/css">
+    <link rel="stylesheet" href="{{ "/css/pixyll.scss" | prepend: site.baseurl }}" type="text/css">
+    <link rel="stylesheet" href="{{ "/css/pixyll.css" | prepend: site.baseurl }}" type="text/css">
 
     <!-- Fonts -->
     {% if site.extended_fonts %}
