--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -51,6 +51,14 @@ $darken-1: rgba(#000,.0625) !default;
 $darken-2: rgba(#000,.125) !default;
 $darken-3: rgba(#000,.25) !default;
 $darken-4: rgba(#000,.5) !default;
+$why: #EE220C !default;
+$who: #00A2FF !default;
+$what: #1DB100 !default;
+$how: #F8BA00 !default;
+$when: #CB297B !default;
+$where: #00A89D !default;
+
+
 
 // Links
 $link-color: $blue;
