--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,7 +57,7 @@ $what: #1DB100 !default;
 $how: #F8BA00 !default;
 $when: #CB297B !default;
 $where: #00A89D !default;
-
+$rowbackground: #F0F2F4 !default;
 
 
 // Links
