refactor works data strucure

--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -215,6 +215,7 @@ tr.work:hover {
   font-weight: 600;
   // transition-delay: 0.1s;
   // background-color: #FFF8E1;
+  border: 1px solid #444444 !important;
 
   td.checked > span {
     background-color: #444444;
