--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,6 +22,7 @@ $h00-responsive-max: 7.68rem !default;
 $h0-responsive-max: 5.76rem !default;
 $h1-responsive-max: 3.84rem !default;
 $abbr-border-bottom: 1px black dotted;
+$code: 0.7rem !default;
 
 // Page width
 $measure-width: 42rem !default;
