--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,19 +7,21 @@ layout: default
 {% assign minutes = 1 %}
 {% endif %}
 
-<div class="post-header mb2">
-  <h1>{{ page.title }}</h1>
-  <span class="post-meta">{{ page.date | date: site.date_format }}</span><br>
-  {% if page.update_date %}
+<div class="post-header mb2 center">
+  <h1 id="page-title">{{ page.title }}</h1>
+  <span class="post-meta">{{page.summary}}</span><br>
+  <!-- <span class="post-meta small">{{ page.date | date: site.date_format }}</span><br> -->
+  <!-- {% if page.update_date %}
     <span class="post-meta">{{ site.text.post.updated }}: {{ page.update_date | date: site.date_format }}</span><br>
-  {% endif %}
-  <span class="post-meta small">
+  {% endif %} -->
+<!--   <span class="post-meta small">
   {% if page.minutes %}
     {{ page.minutes }} {{ site.text.post.minute_read }}
   {% else %}
     {{ minutes }} {{ site.text.post.minute_read }}
   {% endif %}
-  </span>
+  </span> -->
+
 </div>
 
 <article class="post-content">
