--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -7,6 +7,7 @@ pre code {
 pre,
 code {
   font-family: $monospace-font-family;
+  font-size: $code;
 }
 
 code {
@@ -22,7 +23,7 @@ pre {
 }
 
 .highlight .p {
-  font-size: 1.125rem;
+  font-size: $code;
   line-height: 1;
 }
 
