squeeze body text

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -74,6 +74,7 @@ $space-1: .5rem !default;
 $space-2: 1rem !default;
 $space-3: 2rem !default;
 $space-4: 4rem !default;
+$space-5: 6rem !default;
 
 // Buttons
 $button-font-size: inherit !default;
