--- a/_sass/basscss/_base-typography.scss
+++ b/_sass/basscss/_base-typography.scss
@@ -102,6 +102,8 @@ h6,
 
 #page-title {
   margin-bottom: 0;
+  font-size: 2.4rem;
+  // font-family: 'Playfair Display'
 }
 
 .names {
@@ -138,4 +140,9 @@ h6,
 
 .where {
   color: $where;
+}
+
+.squeeze {
+  margin-left: $space-5;
+  margin-right: $space-5;
 }
