--- a/_sass/basscss/_base-typography.scss
+++ b/_sass/basscss/_base-typography.scss
@@ -102,8 +102,8 @@ h6,
 
 #page-title {
   margin-bottom: 0;
-  font-size: 2.4rem;
-  // font-family: 'Playfair Display'
+  font-size: 4.0rem;
+  font-family: 'Playfair Display';
 }
 
 .names {
