add poloclub link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     </small>
     <br>
     <small>
-      Polo Club of Data Science @ Georgia Tech
+      <a href="http://poloclub.gatech.edu/">Polo Club of Data Science @ Georgia Tech</a>
     </small>
   </div>
 </footer>
