--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,6 +28,7 @@ $code: 0.7rem !default;
 $measure-width: 42rem !default;
 
 // Viewport widths
+$viewport-tiny: 0em;
 $viewport-small: 32em;
 $viewport-medium: 48em;
 $viewport-large: 64em;
