--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -20,6 +20,7 @@ pre {
   overflow-x: scroll;
   margin-bottom: 0.88em;
   background-color: $pre-background-color;
+  border: $footer-border-top;
 }
 
 .highlight .p {
