--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -16,3 +16,27 @@
 .material:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
+
+.image-cropper {
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+.person {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 200px;
+}
+
+.person a {
+  color: $dark-gray;
+}
+
+.person-description {
+  color: $mid-gray;
+}
