add VIS 2018 works, improve read me, add button to add new work at bottom of table

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -95,6 +95,9 @@
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 
+    <!-- google matieral icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     {% if site.google_analytics %}
     <script type="text/javascript">
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
