--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -153,7 +153,7 @@ tr:nth-child(2){
 
 .table-caption {
   font-size: 0.8rem;
-  color: #aaaaaa;
+  color: $mid-gray !important;
   text-align: center;
   padding-bottom: 20px;
 }
@@ -174,5 +174,9 @@ tr.work:hover {
 
   td.checked > span {
     background-color: #444444;
+  }
 }
+
+tr:nth-child(40){
+  border-bottom: 1px solid #000;
 }
