test removing max width on note for rendering CSS properly

--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -186,7 +186,7 @@ tr:nth-child(40){
   border: $footer-border-top;
   border-radius: 5px;
   background-color: $pre-background-color;
-  max-width: 500px;
+  // max-width: 500px;
   display: block;
   margin: 0 auto;
 }
