--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -48,3 +48,20 @@
 .person-description {
   color: $mid-gray;
 }
+
+.video-wrapper {
+	position: relative;
+	padding-bottom: 53.25%; /* 16:9ish */
+	padding-top: 25px;
+  height: 0;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.video-wrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
